Fixed a bug where the horizontal scroll bar would appear for resolutions less than 480 px

--- a/7-product-list-preview/css/responsive.css
+++ b/7-product-list-preview/css/responsive.css
@@ -7,7 +7,7 @@
 
 @media screen and (max-width: 480px) {
     .product {
-        flex-basis: 100%;
+        flex-basis: calc(100% - 30px);
         margin: 15px;
     }
 }
