--- a/7-product-list-preview/css/style.css
+++ b/7-product-list-preview/css/style.css
@@ -10,8 +10,8 @@ html, body {
 
 .productList {
     display: flex;
-    max-width: 100vw;
-    max-height: 100vh;
+    width: 100vw;
+    height: 100vh;
     justify-content: space-evenly;
     align-items: center;
     flex-flow: row wrap;
